No longer wrapped in the input wrapper which allows easier styling

--- a/src/app/components/inputs/minmaxinput/minmaxinput.component.scss
+++ b/src/app/components/inputs/minmaxinput/minmaxinput.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../theme.scss';
 
+:host {
+    flex: 1;
+}
+
 .min-max-inputs {
     display: flex;
     align-items: stretch;
